[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="*", features = ["ws","headers"] }
axum-extra = { version="*"}
futures = "*"
futures-util = { version = "*", default-features = false, features = ["sink", "std"] }
headers = "*"
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "*"
tower = { version = "*", features = ["util"] }
tower-http = { version = "*", features = ["fs", "trace"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
